Homework05_K8s/task_2/canary/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubeapp-production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubeapp
      env: production
  template:
    metadata:
      name: kubeapp
      labels:
        app: kubeapp
        env: production
    spec:
      containers:
      - name: kubeapp
        image: tsarspb/k8s-canary:1.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        command: ["/app"]
        ports:
        - name: kubeapp
          containerPort: 8080
        resources:
          requests: # minimum resources required
            cpu: 250m
            memory: 64Mi
          limits: # maximum resources allocated
            cpu: 500m
            memory: 512Mi
