Homework05_K8s/task_2/canary/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/canary: "true"
    #nginx.ingress.kubernetes.io/canary-weight: "30"
    #nginx.ingress.kubernetes.io/canary-by-header-value: "canary:always"
spec:
  rules:
#    - host: happy.k8s.io
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeapp-production-service
                port:
                  number: 81
